# market-feed-cpp

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  PORTFOLIO_SUMMARY.md  README.md  demo_for_screenshots.sh
.github/workflows/: ci.yml
bench/: CMakeLists.txt  benchmark_feed_processing.cpp  benchmark_order_book.cpp  benchmark_ring_buffer.cpp
docs/: generate_charts.py  requirements.txt
include/: clock.hpp  decoder.hpp  messages.hpp  order_book.hpp  publisher.hpp  ring_buffer.hpp
src/: CMakeLists.txt  main.cpp
src/book/: order_book.cpp
src/feed/: decoder.cpp
src/publish/: publisher.cpp
test/: CMakeLists.txt  test_decoder.cpp  test_integration.cpp  test_messages.cpp  test_order_book.cpp  test_ring_buffer.cpp
tools/: CMakeLists.txt
tools/simgen/: CMakeLists.txt  simgen.cpp
